syntax = "proto3";

package executorGRPC;

service Commander {
	 rpc ExecuteCommand (CommandMessage) returns (StatusMessage) {}
}


message StatusMessage {
	optional string status = 1;
}

message CommandMessage {
	optional string URL = 1;
	optional string script = 2;
	optional string scriptName = 3;
	optional int32 runTime = 4;
	optional int32 maxWorkers = 5;
	optional double growthFactor = 6;
	optional double timeBetweenGrowth = 7;
	optional int32 startingRequestsPerSecond = 8;
	optional int32 maxRequestsPerSecond = 9;
}

